--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,6 @@ steps:
 
 - script: |
     npm install -g @angular/cli
-    npm install
+    npm install --no-optional
     ng build --prod
   displayName: 'npm install and build'
